@@ -671,6 +671,10 @@ Build
 - Issue #24986: It is now possible to build Python on Windows without errors
   when external libraries are not available.
 
+- Issue #24421: Compile Modules/_math.c once, before building extensions.
+  Previously it could fail to compile properly if the math and cmath builds
+  were concurrent.
+
 - Issue #25798: Update OS X 10.5 installer to use OpenSSL 1.0.2e.
 
 Windows
